--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<p>You will be blessed with a random number at the beginning of the game. There are four crystals below. By clicking on
 					a crystal, you will add a specific amount of points to your total score.</p>
 				<p>You will win the game by reaching the total score, but be careful! If your score goes above the goal, you will lose.</p>
-				<p>Each time the game restarts, you are given a new Goal, and the Mystery Crystals hidden amounts are reset.</p>
+				<p>Each time the game restarts, you are given a new Goal, and the Crystals' hidden amounts are reset.</p>
 			</div>
 
 			<div class="col-xl-8">
